# ibot-v3

./: .gitignore  application.yml  pyproject.toml
discord_bot_v3/: bot.py  lol_stats_helper.py
